# lemana_public

./: .gitignore  README.md  pyproject.toml
Projects/auto_schedule/: README.md  auto_schedule.py  data.py  google_sheets.py  main_logic.py  private.py  world.py
Projects/auto_spp/: README.md  auto_spp.py  data.py  deals_funk.py  module_selenium.py  private.py  world.py
Projects/can_ban_sort/: README.md  can_ban_sort.py  main_logic.py  private.py
Projects/goal_filler/: README.md  data.py  deals_funk.py  goal_filler.py  google_sheets.py  private.py  world.py
Projects/host_eq/: data.py  host_eq.py  private.py
Projects/phone_taker_from_deals/: PhoneBan.py  README.md  data.py  main_logic.py  private.py
Projects/private_finder/: private_finder.py
Projects/spp_rate/: README.md  data.py  exel.py  google_sheets.py  main_logic.py  private.py  spp_rate.py  time_module.py  world.py
Projects/whats_app_sender/: README.md  whats_app_sender.py
installers/: auto_schedule.bat  auto_spp.bat  can_ban_sort.bat  goal_filler.bat  spp_rate.bat
my_libs/: __init__.py  aioclient.py  log.py  processor.py  time_helper.py  ui_module.py
